Implement security and performance optimizations
Security improvements:
- Fix XSS vulnerability by replacing innerHTML with safe DOM manipulation
- Add Content Security Policy (CSP) headers to prevent code injection
- Implement input sanitization for user data with validation
- Add length limits and special character filtering

Performance optimizations:
- Optimize chart update performance by updating data instead of recreating chart
- Improve timer accuracy using Date.now() instead of setInterval accumulation
- Cache DOM elements to reduce repeated querySelector calls
- Reduce chart animation duration and use 'none' mode for data updates
- Increase timer update frequency to 100ms for better precision

Technical improvements:
- Add proper error handling for chart operations
- Implement high-precision timer with pause/resume support
- Create centralized DOM element caching system
- Add validation for todo item length and content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 內容安全策略 (CSP) 防護 -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self';">
   <title>番茄鐘</title>
   <link rel="stylesheet" href="style.css"> <!-- 引入外部 CSS 樣式表 -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
